--- a/shard.yml
+++ b/shard.yml
@@ -1,10 +1,11 @@
 name: grpc
-version: 0.1.2
+version: 0.1.3
 
 authors:
   - Jamie Gaskins <jgaskins@gmail.com>
+  - Vico Bill <vicobill@hotmail.com>
 
-crystal: 0.31.0
+crystal: 0.34.0
 
 scripts:
   postinstall: shards build
